--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
     </style>
 </head>
 <body>
-    <img id="notebook" src="mac.jpeg" alt="Notebook en el centro">
+    <img id="notebook" src="mac.jpg" alt="Notebook en el centro">
 </body>
 </html>
