--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fondo Dividido con Notebook Grande y Centrada</title>
+    <title>PROFESORADO EN EDUCACION TECNOLOGICA</title>
     <style>
         /* Estilos CSS internos */
         body {
