--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             
             height: 1em; /* Altura de 1em */
             
-            background-color: rgba(255, 255, 255, 0.7); /* Fondo semi-transparente */
+            background-color: #5a2b8e; /* Fondo semi-transparente */
             border: 2px solid #ccc; /* Borde para visualizarlo mejor */
             box-sizing: border-box; /* Incluye padding y borde en el width/height si los añades */
             text-align: center; /* Centra el texto */
