--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             max-width: 90%; /* Ajusta el tamaño máximo de la imagen */
             height: auto; /* Mantiene la proporción de la imagen al ajustar el ancho */
             display: block; /* Asegura que la imagen sea un elemento de bloque para el posicionamiento */
-            z-index: 2; /* ¡NUEVO! Coloca la notebook por encima de la caja */
+            z-index: 2; /* Coloca la notebook por encima de la caja */
         }
 
         /* --- ESTILO MODIFICADO PARA LA CAJA CENTRADA --- */
@@ -53,7 +53,8 @@
             color: #ffffff; /* Color del texto a blanco para mejor contraste */
             line-height: 2em; /* Alinea el texto verticalmente */
             font-size: 2em; /* Tamaño de fuente para visibilidad */
-            z-index: 1; /* ¡NUEVO! Coloca la caja por debajo de la notebook */
+            z-index: 1; /* Coloca la caja por debajo de la notebook */
+            border-radius: 1em; /* ¡NUEVO! Hace las esquinas curvas. Puedes ajustar el valor. */
         }
     </style>
 </head>
