--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
             padding-right: 0.5em; 
             text-align: initial; 
         }  
-        /* NUEVOS ESTILOS PARA LA CAJA 4 (nth-child(4)) */
         .caja-general:nth-child(4) { 
             top: calc(50% - 1.5em);
             display: flex; 
@@ -85,7 +84,6 @@
             padding-right: 0.5em; 
             text-align: initial; 
         } 
-        /* NUEVOS ESTILOS PARA LA CAJA 5 (nth-child(5)) */
         .caja-general:nth-child(5) { 
             top: 50%; /* Esta es la caja central */
             display: flex; 
@@ -95,7 +93,6 @@
             padding-right: 0.5em; 
             text-align: initial; 
         }              
-        /* NUEVOS ESTILOS PARA LA CAJA 6 (nth-child(6)) */
         .caja-general:nth-child(6) { 
             top: calc(50% + 1.5em);
             display: flex; 
@@ -105,7 +102,7 @@
             padding-right: 0.5em; 
             text-align: initial; 
         } 
-        .caja-general:nth-child(7) { top: calc(50% + 3em); }  
+        /* La regla para .caja-general:nth-child(7) se ha eliminado */
 
     </style>
 </head>
@@ -130,7 +127,7 @@
     </div>
     <div class="caja-general">
         <span>HISTORIA DE LA TECNOLOGIA</span>
-        <span></span> </div>
-    <div class="caja-general">Caja 7</div>
+        <span></span>
+    </div>
 </body>
 </html>
