--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
             border: 2px solid #ccc; /* Borde para visualizarlo mejor */
             box-sizing: border-box; /* Incluye padding y borde en el width/height si los añades */
             color: #ffffff; /* Color del texto a blanco para mejor contraste */
+            font-size: 2em; /* Tamaño de fuente base para la caja, pero será sobrescrito por el span */
             z-index: 1; /* Coloca las cajas por debajo de la notebook */
             border-radius: 1em; /* Hace las esquinas curvas. */
         }
 
         /* Estilo para los spans dentro de las cajas */
         .caja-general span {
-            font-size: 20px; /* ¡NUEVO! Tamaño de fuente para el texto dentro de los spans */
+            font-size: 12px; /* ¡NUEVO! Tamaño de fuente para el texto dentro de los spans */
             line-height: 1; /* Asegura que el line-height del span no interfiera con el centrado del flexbox */
         }
 
